syntax="proto3";

package proto;
option go_package = "github.com/paramonies/ya-gophkeeper/pkg/gen/gophkeeper/v1;gophkeeper";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc GetAllUserDataFromDB(GetAllUserDataFromDBRequest) returns (GetAllUserDataFromDBResponse);
}

message RegisterUserRequest{
  string login = 1;
  string password = 2;
}

message RegisterUserResponse{
  string userID = 1;
  string jwt = 2;
}

message LoginUserRequest{
  string login = 1;
  string password = 2;
}

message LoginUserResponse{
  string userID = 1;
  string jwt = 2;
}

message GetAllUserDataFromDBRequest {

}

message GetAllUserDataFromDBResponse {
  repeated Password passwords = 1;
  repeated Text texts = 2;
  repeated Binary binaries = 3;
  repeated Card cards = 4;
}

message Password {
  string login = 1;
  string password = 2;
  string meta = 3;
  uint32 version = 4;
}

message Text {

}

message Binary {

}

message Card {

}